--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="antialiased max-w-xl mx-4 mt-8 lg:mx-auto">
   <app-root></app-root>
 </body>
 </html>
