--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
   <title>TalksCorneresc</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link
+            rel="icon"
+            type="image/x-icon"
+            href="https://storage.googleapis.com/lnco-artifacts.appspot.com/artifacts/lnco.svg"
+        />
 </head>
 <body class="antialiased max-w-xl mx-4 mt-8 lg:mx-auto">
   <app-root></app-root>
